--- a/Style.css
+++ b/Style.css
@@ -1,24 +1,18 @@
 @media screen and (min-width: 1008px) {
   body {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr;
     margin: 0px;
   }
 
   main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    font-size: xx-large;
   }
-  #FöretagetsLåga {
-    max-width: 300px;
-    max-height: 250px;
-    min-width: 300px;
-    min-height: 250px;
-  }
-  #BåtBild {
-    width: 200px;
-    height: 200px;
-    margin: 50px;
+  p {
+    margin-top: 10px;
   }
   header {
     background-image: url(./img/Vatten.webp);
@@ -37,13 +31,40 @@
   }
   button {
     padding: 0px;
-    border: 0px;
+    background-color: gray;
+    color: black;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: lightblue;
+    color: white;
+  }
+
+  #Top {
+    display: flex;
+    flex-direction: row;
+  }
+  #Botten {
+    display: flex;
+    flex-direction: row;
+  }
+  #FöretagetsLogga {
+    width: 300px;
+    height: 250px;
+  }
+  #BåtBild {
+    width: 200px;
+    height: 200px;
+    margin: 50px;
+    margin-bottom: 0px;
   }
   #Sidknappar {
     width: 300px;
-    height: 160px;
+    height: 80px;
     border: 0px;
     padding: 0px;
+    margin-top: 30px;
   }
   #Toprighticons {
     display: flex;
@@ -52,8 +73,9 @@
     height: 75px;
     border: 5px solid black;
     margin-top: 60px;
+    background-color: white;
   }
-  #ProfildBild {
+  #ProfilBild {
     margin-left: 25px;
     margin-top: 10px;
   }
@@ -70,11 +92,12 @@
     min-height: 45px;
   }
   #Reklam {
-    margin-right: 400px;
-  }
-  #Reklam {
     width: 300px;
-    height: 900px;
+    height: 600px;
+  }
+  #ReklamBild {
+    width: 100%;
+    height: 100%;
   }
 }
 @media screen and (min-width: 641px) and (max-width: 1007px) {
@@ -86,6 +109,8 @@
   main {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 50px;
+    text-align: center;
   }
   header {
     background-image: url(./img/Vatten.webp);
@@ -105,22 +130,31 @@
   }
   button {
     padding: 0px;
-    border: 0px;
+    background-color: gray;
+    color: black;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: lightblue;
+    color: white;
+  }
+  h1{
+    margin-right: 180px;
   }
   #Top {
     display: flex;
     flex-direction: row;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;    
+    top: 0;
   }
   #BåtBild {
     width: 200px;
     height: 200px;
     margin-top: 50px;
-    margin-left: 100px;
   }
-  #FöretagetsLåga {
+  #FöretagetsLogga {
     max-width: 200px;
     max-height: 200px;
     min-width: 200px;
@@ -142,8 +176,9 @@
     border: 5px solid black;
     margin-top: 30px;
     margin-left: -140px;
+    background-color: white;
   }
-  #ProfildBild {
+  #ProfilBild {
     margin-left: 10px;
     margin-top: 5px;
     max-width: 40px;
@@ -160,15 +195,12 @@
     height: 40px;
   }
   #Reklam {
-    width: 770px;
-    height: 150px;
-    position: -webkit-sticky;
-    position: sticky;
-    bottom: 0;
+    width: 0px;
+    height: 0px;
   }
   #ReklamBild {
-    width: 770px;
-    max-height: 150px;
+    width: 100%;
+    max-height: 100%;
   }
 }
 @media screen and (max-width: 640px) {
@@ -181,6 +213,7 @@
   main {
     display: grid;
     grid-template-columns: 1fr;
+    text-align: center;
   }
   header {
     background-image: url(./img/Vatten.webp);
@@ -201,22 +234,28 @@
   }
   button {
     padding: 0px;
-    border: 0px;
+    background-color: gray;
+    color: black;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: lightblue;
+    color: white;
   }
   #Top {
     display: flex;
     flex-direction: row;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;      
+    top: 0;
   }
   #BåtBild {
     width: 200px;
     height: 200px;
     margin-top: 50px;
-    margin-left: 100px;
   }
-  #FöretagetsLåga {
+  #FöretagetsLogga {
     max-width: 0px;
     max-height: 0px;
     max-width: 0px;
@@ -233,8 +272,9 @@
     border: 5px solid black;
     margin-top: 5px;
     margin-left: -120px;
+    background-color: white;
   }
-  #ProfildBild {
+  #ProfilBild {
     margin-left: 20px;
     margin-top: 5px;
     max-width: 30px;
@@ -251,14 +291,11 @@
     height: 30px;
   }
   #Reklam {
-    width: 430px;
-    height: 100px;
-    position: -webkit-sticky;
-    position: sticky;
-    bottom: 0;
+    width: 0px;
+    height: 0px;
   }
   #ReklamBild {
-    width: 430px;
-    max-height: 100px;
+    width: 100%;
+    max-height: 100%;
   }
 }
